landing/frontend/main.styl
@require 'frontend'
@require 'frontend/animate/fading_entrances/fadeInDown'
@require 'frontend/animate/fading_entrances/fadeInUp'

body
  overflow-x hidden
  > header
    position relative
    overflow hidden
    background $rich-black

    > nav
      box-shadow none
      transition all .2s

  > footer
    position fixed
    bottom 0
    left 0
    right 0
    color $primary-text
    z-index 2

    .contact, .terminal
      display none

    .info
      padding 10px 0
      img
        height 60px

    section.copyright
      background transparent

body > header
  div[role='nav']
    button
      position fixed
      top 50vh
      z-index 90
      padding 20px 2px
      font-size 2em
      transform translateY(-50%)
      background transparent
      color inherit
      &:hover
        background alpha($white, .2)
    button.left
      left 0
    button.right
      right 0

body > main
  overflow hidden
  margin-top 0
  canvas, svg
    position fixed
    top 0
    left 0
    z-index 0

    width 100vw
    height 100vh

slide-count = 6

body > main
  background #EBEBEB
  font-family type-sans-serif
  overflow hidden

  width slide-count * 100vw
  height 100vh
  margin-left 0

  transition all .5s cubic-bezier(.175, .685, .32, 1)

  position relative
  display flex

  section
    width 100vw
    height 100vh
    margin 0

    display flex
    flex-grow 0
    flex-shrink 0
    position relative

    z-index 1

    article
      margin auto 30% auto 10%
      position relative
      padding 0 20px

    h1
      margin 0
      position relative
      display inline
    h2
      font-size 3rem
      font-weight 800
      text-transform uppercase
    h3
      font-weight 600
    p
      font-size 1.2rem
      font-weight 300
      line-height 1.5rem
    blockquote
      margin 10px -15px
      padding 0 15px

      font-weight 600
      line-height 1.5em
      font-size 1.2em
      position relative

      &:before
        content '‟'
        position absolute
        left -30px
        top 15px
        font-size 60px
      cite
        display block
        font-style normal
        font-size 1em
        font-weight 300

    abbr
      font-family $type-mono
      font-size .8em
      font-weight 300

      @media(max-width 768px)
        top 100%
        left 0

    img
      max-height 40px
      max-width 100%

    &.active
      article
        animation fadeInDown .5s


body
  &[slide-active='home']
    main
      background #EBEBEB
      color #3A405A

      h2
        span.em1
          font-size 4rem
          font-weight 700
          letter-spacing 2px

    div[role='nav']
      color #3A405A
      button.left
        display none

  &[slide-active='ossome']
    main
      background #004E98
      color #EBEBEB

  &[slide-active='dataweave']
    main
      background #0E122D
      color #EBEBEB

  &[slide-active='design']
    main
      background #2D4472
      color #C8CCC6

  &[slide-active='programming']
    main
      background #212412
      color #EBEBEB

